# pixhawk_driver_custom_aerostack

driver_pixhawk/: CMakeLists.txt  package.xml
driver_pixhawk/configs/: px4_acro_config.yaml  px4_attitude_config.yaml
driver_pixhawk/launch/: pixhawk_interface.launch  px4.launch
driver_pixhawk/src/include/: pixhawk_command_interface.hpp  pixhawk_state_interface.hpp
driver_pixhawk/src/nodes/: pixhawk_command_node.cpp  pixhawk_state_node.cpp
driver_pixhawk/src/sources/: pixhawk_command_interface.cpp  pixhawk_state_interface.cpp
subpackages/thrust2throttle_controller/: CMakeLists.txt  package.xml
subpackages/thrust2throttle_controller/launch/: thrust2throttle_controller.launch
subpackages/thrust2throttle_controller/src/include/: thrust2throttle_controller.hpp
subpackages/thrust2throttle_controller/src/source/: thrust2throttle_controller.cpp  thrust2throttle_controller_node.cpp
